# cmake-templates

./: README.md
executable/: CMakeLists.txt  build
executable/src/common/: CMakeLists.txt  Incrementer.cpp  Incrementer.h
executable/src/common/test/: IncrementerTest.h
executable/src/exe/: CMakeLists.txt  main.cpp
simple/: CMakeLists.txt
simple/src/: main.cpp
